--- a/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Molecular verification - metal"
-author: "Anne Hids"
+title: "Verification of SimpleBox - spreadsheet versus R implementation for metals"
+author: "Anne Hids, Valerie de Rijk, Matthis Hof and Joris Quik"
 date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
@@ -10,26 +10,24 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::knit_meta()
-knitr::opts_chunk$set(echo = TRUE)
-projectRoot <- paste(getwd(), "..", "..", "..", "..", sep = "/")
-knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
+# knitr::knit_meta()
+# knitr::opts_chunk$set(echo = TRUE)
+# projectRoot <- paste(getwd(), "..", "..", "..", "..", sep = "/")
+# knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 options(dplyr.summarise.inform=FALSE)
 knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 8)
 ```
 
-This vignette demonstrates the verification process of the molecular
-version of Simplebox for a substance of class 'metal'.
-First, the k's are compared between R and excel,
-and consequently the steady state masses are compared. This is done for
-5 molecular substances; each of a different chemical class (no class,
-acid, base, neutral and metal). The reason that the verification is performed for 
-each of these classes is that some processes differ per class.
+This vignette demonstrates the verification process of SimpleBox
+implemented in R (version 2024.8.0) and in an Excel^TM^ spreadsheet
+(xl v4.0.5). To do this the 1^st^ order rate constants (k's) and
+steady state masses are compared between the two model implementations.
+The differences should be negligible and only based on rounding errors.
+In this case we choose a relative difference of the k's or masses
+between the models to not exceed 0.1%.
 
-First, the world needs to be initialized for a substance. In this case, that substance
-is Sb(III), which is a metal.
-
-```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
+# Verification method
+```{r Initialize, message=FALSE, warning=FALSE, include=FALSE}
 # Create a list with the names of substances
 Potential_substances <- c("1-aminoanthraquinone", # no class
                           "1-HYDROXYANTHRAQUINONE", # acid
@@ -42,6 +40,36 @@ substance <- Potential_substances[5]
 
 source("baseScripts/initWorld_onlyMolec.R")
 ```
+
+
+The SBoo world is initialized for a substance. In this case, that
+substance is `r World$fetchData("Substance")`, which is of class: `r World$fetchData("ChemClass")`.
+
+At release already improvements or developments have been implemented in
+the R version of SimpleBox (SBoo) which are not implemented in Excel
+which will result in differences between the spreadsheet and R
+implementation. For this reason a TEST variable has been introduced to
+the changed algorithms in R in order to verify the outcome of SimpleBox
+in R with the original implementation in the spreadsheet version. So,
+TEST variable is a boolean, that can be used to calculate some processes
+in R the same way as in excel for the verification without removing the
+improvements that are made. For this reason we show the verification in
+two steps:
+
+1.  Compare k's and steady state masses of SBoo with updates to the
+    spreadsheet.
+
+2.  Compare k's and steady state masses of adapted SBoo using TEST
+    variable to the spreadsheet.
+
+When comparing k's and steady state masses between SimpleBox in R and
+Excel^TM^, the goal is that the relative difference is less than 0.1
+percent for each k and steady state mass. The reason is that smaller
+differences are almost inevitable due to differences in rounding values
+between excel and R, and not the result of mistakes in calculations or
+input values.
+
+# Step 1. Compare SBoo (incl. updates) to spreadsheet
 
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
 #Comparing K's from R model to K's from excel model
@@ -135,7 +163,7 @@ mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
 mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
 ```
 
-## Compare k's
+## Compare first order rate constants
 When comparing k's between R and excel, the goal is that the relative difference is less
 than 1 percentile for each k. The reason is that smaller differences often are 
 a result of differences in rounding values between excel and R, and not the result
@@ -150,13 +178,13 @@ variable is a boolean, that can be used to calculate some processes in R the sam
 way as in excel for the verification without removing the improvements that are 
 made. When this test variable was used and why will be explained below. 
 
-### Diagonal k's
+### Diagonal sum of 'from' k's
 
 Diagonal k's are k's that are on the diagonal of the k matrix. They are calculated
 as the sum of all the k's leaving the subcompartment plus the sum of the removal process
 k's (i.e. degradation or burial). 
 
-```{r Plot diagonal differences, echo=FALSE, warning=FALSE}
+```{r PlotsDiagonalk_1,fig.cap = "Figure 1: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)", echo=FALSE, warning=FALSE}
 
 custom_theme <- function() {
   theme(
@@ -170,33 +198,32 @@ custom_theme <- function() {
 } 
 
 # Plot of differences of the diagonals per compartment
-ggplot(merged_diagonal, aes(x = from, y = diff)) +
-  geom_boxplot() +
-  ggtitle(paste0("Figure 1: Absolute differences removal k's between R and excel for ", substance)) +
-  geom_hline(yintercept = 0.001, color = "red") +
-  geom_hline(yintercept = -0.001, color = "red") +
-  custom_theme()+
-  labs(x = "from", y = "Absolute diff")
+# ggplot(merged_diagonal, aes(x = from, y = diff)) +
+#   geom_boxplot() +
+#   ggtitle(paste0("Figure 1: Absolute differences removal k's between R and excel for ", substance)) +
+#   geom_hline(yintercept = 0.001, color = "red") +
+#   geom_hline(yintercept = -0.001, color = "red") +
+#   custom_theme()+
+#   labs(x = "from", y = "Absolute diff")
 
 # Plot of relative differences of the diagonals per compartment
 ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   geom_boxplot() +
-  ggtitle(paste0("Figure 2: Relative differences removal k's between R and excel for ", substance)) +
+  ggtitle(paste0(substance)) +
   geom_hline(yintercept = 0.001, color = "red") +
   geom_hline(yintercept = -0.001, color = "red") +
   custom_theme()+
   labs(x = "from", y = "Relative diff")
 ```
 
-Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel. 
-As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake and
-sediment subcompartments. 
+As can be seen in Figure 1, relative differences larger than 0.1% are in the lake and
+sediment subcompartments.
 
-```{r filter large diagonal differences, include=FALSE, echo=FALSE}
-diagonal_diffs <- merged_diagonal |>
+```{r DiagonalDifferences, include=FALSE, echo=FALSE}
+merged_diagonal |>
   mutate(reldif = abs(reldif)) |>
   filter(reldif > 0.001) |>
-  arrange(desc(reldif))
+  arrange(desc(reldif)) |> knitr::kable(digits = 30)
 ```
 
 #### Lake difference
@@ -206,7 +233,7 @@ being included in R but not in excel. To make an accurate comparison between R
 and excel, the Test variable was used to exclude flows from lake to lakesediment in 
 the processes k_Sedimentation and k_Adsorption.
 
-```{r Lake removal KEEP FOR FINAL VERSION!, include=FALSE, echo=FALSE}
+```{r LakeTest, include=FALSE, echo=FALSE}
 lake <- kaas |>
   filter(fromSubCompart == "lake") |>
   filter(toSubCompart == "lake")
@@ -218,20 +245,18 @@ lake2 <- kaas |>
 
 #### Settling velocity
 
-The difference the diagonal k's for sedimentation comes from a difference in k's for the 
+The difference in the diagonal k's for sedimentation comes from a difference in k's for the 
 sedimentation and resuspension processes. 
 
 This is caused by the use of different formulas to calculate settling
 velocity between excel and R. In excel, settling velocity is always calculated as: 
 
-$$ 
-SetVel <- 2.5/(24*3600)
-$$
+`SetVel <- 2.5/(24*3600)`
+
 While in R, an improved version of this formula is used: 
 
-$$ 
-SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)
-$$
+`SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)`
+
 Using the Test variable, the settling velocity formula is temporarily changed to 
 the formula used in excel for the resuspension ans sedimentation processes (K_resuspension
 and k_Sedimentation). This solves the differences in diagonal k's related to 
@@ -246,17 +271,17 @@ excel files that were used for comparison to the R output.
 
 ### From-to k's
 
-```{r Plot k differences, echo=FALSE, warning=FALSE}
+```{r PlotFromTok_1, echo=FALSE, warning=FALSE, fig.cap="Figure 2: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 # "To" and "from" in one plot
-ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
-  geom_point() +
-  scale_color_gradient(low = "green", high = "red", trans = "log10") +
-  ggtitle(paste0("Figure 3: Absolute differences k's between R and excel for ", substance)) +
-  theme(
-    axis.text.y = element_text(size = 12),
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 12), 
-    plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
-  )
+# ggplot(mergedkaas, aes(x = to, y = from, color = abs(diff))) + 
+#   geom_point() +
+#   scale_color_gradient(low = "green", high = "red", trans = "log10") +
+#   ggtitle(paste0("Figure 3: Absolute differences k's between R and excel for ", substance)) +
+#   theme(
+#     axis.text.y = element_text(size = 12),
+#     axis.text.x = element_text(angle = 45, hjust = 1, size = 12), 
+#     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
+#   )
 
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
@@ -269,7 +294,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-```{r filter large differences, include=FALSE, echo=FALSE}
+
+```{r kDifferences, include=FALSE, echo=FALSE}
 large_differences <- mergedkaas |>
   mutate(relDif = abs(relDif)) |>
   filter(relDif > 0.001) |>
@@ -282,12 +308,62 @@ than 1 percentile go from water to sediment or from sediment to water. Changing
 the formula for calculating settling velocity when Test = TRUE for the sedimentation
 and resuspension processes (explained above under 'Settling velocity') also solves these differences.
 
-## Run again with Test=TRUE
+### Steadystate mass
+```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
+library(stringi)
+
+World$NewSolver("SB1Solve")
+
+emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000) ) # convert 1 t/y to si units: kg/s
+
+MW <- World$fetchData("MW")
+
+emissions <- emissions |>
+  mutate(Emis = Emis*1000/(MW*365*24*60*60))
+
+SSsolve.R <- World$Solve(emissions)
+
+SSsolve.excel <- read.xlsx(SBExcelName,
+                             sheet=11,
+                             colNames=TRUE,
+                             rows=c(44,45))
+
+SSsolve.excel <- SSsolve.excel |>
+  select(-c(STEADY.STATE, X2)) |>
+  pivot_longer(names_to = "Abbr", values_to = "EqMass", cols = everything()) 
+
+SSsolve.R <- SSsolve.R |> mutate(Abbr =  paste0(accronym_map[SubCompart], 
+                            accronym_map2[Scale])) |>
+  mutate(SubCompart = str_replace(SubCompart, "lakesediment", "lake")) |>
+  mutate(Abbr = str_replace(Abbr, "sd0R", "w0R")) |>
+  mutate(Abbr = str_replace(Abbr, "sd0C", "w0C")) |>
+  group_by(Scale, SubCompart, Species, Abbr) |>
+  summarise(EqMass = sum(EqMass))
+
+merged_SS_SB1 <- merge(SSsolve.R, SSsolve.excel, by="Abbr", suffixes = c(".R", ".Excel")) |>
+  mutate(absdiff = EqMass.R-EqMass.Excel) |>
+  mutate(reldiff = absdiff/EqMass.R)
+
+#Diff per "to" compartment
+ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
+  geom_boxplot() +
+  ggtitle(paste0(substance)) +
+  geom_hline(yintercept = 0.001, color="red") +
+  geom_hline(yintercept = -0.001, color="red") +
+  custom_theme()
+
+
+
+```
+
+The differences in k's drives the model output: the steady state mass. So a final check is to see how much the steady state masses differ between both implementations of SimpleBox (Figure 3). From this it is clear that there  are differences up to `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=3)*100`%.
+
+# Step 2. Compare SBoo and Spreadsheet excluding updates (Test=TRUE)
 
 Now the value for the Test variable can be changed to TRUE, and the difference
 in k's between excel and R can be tested again: 
 
-```{r Test TRUE, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
+```{r comparison_2, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 World$SetConst(Test = "TRUE")
 World$UpdateKaas(mergeExisting = FALSE)
 
@@ -368,6 +444,11 @@ mergedkaas$diff <- mergedkaas$k_R - mergedkaas$k_Excel #compare R k to Excel K
 
 mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)  
 
+```
+
+## Compare first order rate constants
+
+```{r PlotDiagonalk_2, fig.cap = "Figure 4: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)", include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 # Plot of relative differences of the diagonals per compartment
 ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   geom_boxplot() +
@@ -377,28 +458,32 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   custom_theme()+
   labs(x = "from", y = "Relative diff")
 
+```
+
+
+```{r PlotFromTok_2, echo=FALSE, warning=FALSE, message=FALSE, fig.cap="Figure 5: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
   scale_color_gradient(low = "green", high = "red") +
-  ggtitle(paste0("Figure 6: Relative differences k's between R and excel for ", substance)) +
+  ggtitle(paste0( substance)) +
   theme(
     axis.text.y = element_text(size = 12),
     axis.text.x = element_text(angle = 45, hjust = 1, size = 12), 
     plot.margin = margin(t = 10, r = 10, b = 30, l = 10)
   )
-
 ```
 
-As can be seen in Figures 5 and 6, the temporary changes made using the Test variable 
+
+As can be seen in Figures 4 and 5, the temporary changes made using the Test variable 
 solved the large differences in k's between R and excel for both the diagonal and the 
 from-to k's. All relative differences are now smaller than 1 percentile. 
 
-## Compare steady state emissions
+## Steadystate mass
 
 The steady state masses in R and Excel were compared by calculating the relative differences
 between the masses in R and Excel (Figure 7). The figure shows that all masses between R and Excel relatively differ less than 1 percentile. 
 
-```{r comparison of steady state emissions using SB1Solve, include=TRUE, echo=FALSE, warning=FALSE}
+```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 
 library(stringi)
 
